# jambi

./: .gitignore  MIT-LICENSE  Makefile  PLANNING.md  README.md  TASK.md  docker-compose.yml  jambi.py  mix.exs  pyproject.toml  setup.py
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.copilot/: copilot.yaml
.cursor/rules/: general.mdc  python.mdc
assets/css/: app.css
assets/js/: app.js
config/: config.exs  config.py  dev.exs  prod.exs  runtime.exs  test.exs
config/yaml/: config_dev.yaml
dev_database/: jambi.db-shm  jambi.db-wal
lib/jambi_phoenix/pages/: page.ex
lib/jambi_phoenix_web/controllers/: page_controller.ex
priv/repo/migrations/: 20260302081154_create_pages_table.exs
priv/static/: cache_manifest.json
priv/static/assets/css/: app-37bec89b68fb3d687d5eaf8ebf2ec091.css
rendering/: template_rendering.py
rendering_engine/: template_rendering.py
repository/: page_repository.py
repository/model/: model.py
server/: server.py
server/static/: style.css
server/ui/: create.html  index.html  view.html
server/ui/assets/: delete-confirm.js  style.css
setup/: 663f52c96e7d_init_db_and_pages_table.py  alembic.ini  init.sql
templates/: infinite8.html
test/jambi_phoenix_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex
tests/rendering/: test_template_rendering.py
tests/server/: test_create_page.py  test_index.py
(+1 files in other folders)
